--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
     "react-native-svg": "12.1.0",
-    "react-native-web": "^0.15.7"
+    "react-native-web": "^0.15.7",
+    "expo-notifications": "~0.11.5",
+    "expo-linear-gradient": "~9.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
